--- a/styles.css
+++ b/styles.css
@@ -792,55 +792,278 @@ body {
   margin: 0 0.5rem;
 }
 
-.external-icon > i{
+.external-icon > i {
   color: var(--white-colour);
   transition: color 0.3s ease, transform 0.5s ease-in-out;
-;
 }
 
-.project-card:hover .external-icon > i{
+.project-card:hover .external-icon > i {
   color: var(--pri-colour-5);
   transform: rotate(-45deg);
+}
+
+.portfolio-main .slider {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  margin: 2rem auto;
+  background-color: var(--bg-colour);
+  padding: 5rem 0;
+}
+
+.portfolio-main .slide {
+  display: none;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.portfolio-main .slide.active {
+  display: flex;
+}
+
+.testimonial {
+  width: 45%;
+  font-family: var(--font-pri);
+}
+
+.testimonial-heading {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.testimonial-avatar {
+  width: 4rem;
+  height: 4rem;
+}
+
+.testimonial img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.testimonial-name {
+  margin: 5px 0;
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
+.testimonial-role {
+  font-size: 0.8rem;
+  font-weight: 200;
+  text-align: left;
+  color: #808080;
+}
+
+.testimonial-text {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 5px 0;
+  text-align: left;
+  color: #cacaca;
+  line-height: 1.5;
+}
+
+.dots {
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 3rem;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #fff;
 }
 
 .other {
   width: 80%;
   margin: 0 auto;
-  padding: 5rem 0;
+  /* padding: 3rem 0; */
   position: relative;
-  border: 1px solid red;
 }
 
 .other-heading {
   font-family: var(--font-pri);
   text-transform: uppercase;
   letter-spacing: 2px;
-  font-size: 1.5rem;
-  font-weight: 300;
-  color: var(--white-colour);
-  margin: 1rem 0;
+  font-size: 2.25rem;
+  font-weight: 500;
+  color: var(--pri-colour-5);
 }
 
 .other-text {
   width: 100%;
-  color: var(--white-colour);
-  font-family: var(--font-serif);
-  font-size: 2rem;
-  font-weight: 600;
-  margin-bottom: 5rem;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  gap: 2rem;
+  padding-top: 2rem;
 }
 
-.other-text-intro,
-.other-text-description {
+.text-container {
+  width: 70%;
+  font-weight: 300;
+  color: var(--white-colour);
+  font-family: var(--font-pri);
+  font-size: 1.75rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 1rem;
+}
+
+.image-container {
+  width: 30%;
+  aspect-ratio: 1 / 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.slideshow-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slideshow-img.active {
+  opacity: 1;
+}
+
+.semi-circles-container {
+  font-family: var(--font-tet);
+  position: relative;
+  height: 45rem;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+.base {
+  width: 100%;
+  height: 1px;
+  background-color: var(--pri-colour-5);
+}
+
+.semi-circle {
+  position: absolute;
+  bottom: 0;
+  background: #4e0e0e;
+  width: 200px;
+  height: 100px;
+  opacity: 0;
+  transform: scaleY(0.5);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.semi-circle span {
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.51);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--pri-colour);
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+.circle-1 {
+  z-index: 5;
+  width: 12.5rem;
+  height: 6.25rem;
+  background-color: rgba(234, 189, 124, 1);
+  border-radius: 6.25rem 6.25rem 0 0;
+}
+
+.circle-2 {
+  z-index: 4;
+  width: 25rem;
+  height: 12.5rem;
+  background-color: rgba(234, 189, 124, 0.8);
+  border-radius: 12.5rem 12.5rem 0 0;
+}
+
+.circle-3 {
+  z-index: 3;
+  width: 37.5rem;
+  height: 18.75rem;
+  background-color: rgba(234, 189, 124, 0.6);
+  border-radius: 18.75rem 18.75rem 0 0;
+}
+
+.circle-4 {
+  z-index: 2;
+  width: 50rem;
+  height: 25rem;
+  background-color: rgba(234, 189, 124, 0.4);
+  border-radius: 25rem 25rem 0 0;
+}
+
+.circle-5 {
+  z-index: 1;
+  width: 62.5rem;
+  height: 31.25rem;
+  background: rgba(234, 189, 124, 0.2);
+  border-radius: 31.25rem 31.25rem 0 0;
+}
+
+.semi-circle.show {
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.interests {
+  margin: 3rem 0;
   display: flex;
   justify-content: start;
   align-items: center;
 }
 
-.other-text-intro > p,
-.other-text-description > p {
-  display: block;
-  width: 60%;
+.interests-heading {
+  font-family: var(--font-tet);
+  display: flex;
+  justify-content: start;
+  align-items: baseline;
+  color: var(--pri-colour-5);
+}
+
+.interests-heading-number {
+  margin-right: 3px;
+  font-size: 1rem;
+}
+
+.interests-heading-text {
+  font-size: 1.5rem;
+  letter-spacing: 2px;
+}
+
+.interests-body{
+  color: var(--pri-colour-5);
 }
 
 .contact {
@@ -994,23 +1217,25 @@ body {
 .modal-content {
   background-color: #2a2a2a;
   margin: 5% auto;
-  padding: 40px;
+  padding: 2.5rem;
   border-radius: 10px;
   width: 90%;
-  max-width: 600px;
+  max-width: 37.5rem;
   position: relative;
   animation: modalSlideIn 0.3s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 .close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
   font-size: 1.75rem;
   font-weight: bold;
   cursor: pointer;
   color: #888;
   transition: color 0.3s ease;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .close:hover {
@@ -1027,7 +1252,7 @@ body {
 .modal-type {
   font-family: var(--font-pri);
   color: #888;
-  font-size: 14px;
+  font-size: 0.875rem;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-bottom: 20px;
@@ -1035,6 +1260,8 @@ body {
 
 .modal-description {
   font-family: var(--font-base);
+  font-weight: 300;
+  font-size: 1.2rem;
   line-height: 1.6;
   color: #ccc;
   margin-bottom: 20px;
@@ -1062,15 +1289,15 @@ body {
   font-family: var(--font-tet);
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 0.5rem;
 }
 
 .tech-tag {
   background-color: #3a3a3a;
   color: #ccc;
-  padding: 4px 12px;
-  border-radius: 20px;
-  font-size: 12px;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 1rem;
 }
 
 @keyframes shine {
