--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,8 @@ body {
   left: 0;
   right: 0;
   z-index: 1000;
+  max-width: 100%;
+  box-sizing: border-box; 
 
   .navbar-list {
     display: flex;
@@ -190,6 +192,9 @@ body {
   padding: 2rem;
   transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
+  box-sizing: border-box; /* Ensure padding is included */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  border: none; 
 }
 
 .mobile-nav-list-container .hamburger-close {
@@ -216,6 +221,8 @@ body {
 }
 
 .mobile-nav-list {
+  width: 100%;
+  max-width: 100%; 
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -240,7 +247,7 @@ body {
 
 .mobile-nav-list-container.hide {
   transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.4s ease-in-out;
 }
 
 .main {
@@ -734,17 +741,17 @@ body {
 }
 
 .projects-container {
-  max-width: 1200px;
+  max-width: 75rem;
   margin: 3.5rem auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
   row-gap: 2rem;
   column-gap: 2.75rem;
 }
 
 .project-card {
   height: 10rem;
-  width: auto;
+  width: 100%;
   position: relative;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -753,6 +760,7 @@ body {
   align-items: start;
   justify-content: start;
   gap: 1.25rem;
+  
 }
 
 .project-image-container {
@@ -822,6 +830,7 @@ body {
   flex: 1;
   position: relative;
   padding-top: 1rem;
+  overflow: hidden;
 }
 
 .project-content::before {
@@ -1210,7 +1219,6 @@ body {
   justify-content: start;
   align-items: start;
   gap: 2.5rem;
-  
 }
 
 .contact-third-contact > p,
@@ -1509,15 +1517,11 @@ body {
 
 @media screen and (max-width: 768px) {
   .content {
-    width: 100vw;
+    
   }
 
   .viewport-container {
-    width: inherit;
-  }
-
-  .header {
-    width: 100vw;
+    
   }
 
   .navbar {
@@ -1525,7 +1529,7 @@ body {
     align-items: center;
     justify-content: space-between;
     border: none;
-    width: 100%;
+    max-width: 100%;
     height: 1.5rem;
     margin: 0;
     padding: 2rem 5rem;
@@ -1578,8 +1582,9 @@ body {
     .main-socials {
       position: relative;
       transform: rotate(0deg);
-      right: 0;
+      left: 0;
       margin-top: 3rem;
+      flex-wrap: wrap;
     }
   }
 
@@ -1698,6 +1703,10 @@ body {
     gap: 1.25rem;
   }
 
+  .interests > div{
+    width: 100%;
+  }
+
   .contact-first {
     font-size: 1rem;
   }
@@ -1739,7 +1748,11 @@ body {
     }
 
     .main-second > h1{
-      font-size: 2.5rem;
+      font-size: 2rem;
+    }
+
+    .main-socials{
+      gap: 1.5rem;
     }
 
     .main-socials a{
@@ -1791,7 +1804,7 @@ body {
   }
 
   .portfolio {
-    padding: 2.5rem;
+    padding: 2rem;
   }
 
   .intro-port {
@@ -1819,11 +1832,14 @@ body {
   }
 
   .projects-container {
-    max-width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 1fr));
+    column-gap: 1rem;
+    row-gap: 1.5rem;
   }
 
   .project-card {
     height: 7rem;
+    max-width: 100%;
   }
 
   .project-title {
@@ -1845,6 +1861,7 @@ body {
   }
 
   .contact-third-contact div > p,
+  .contact-third-contact a,
   .contact-third-socials div > p,
   .contact-third-socials a {
     font-size: 0.8rem;
@@ -1859,6 +1876,25 @@ body {
   .copyright {
     padding: 0 3rem;
   }
+}
+
+@media screen and (max-width: 480px) {
+  .viewport-container{
+    padding: 0 1rem;
   }
 
-  
+  .main{
+
+    .main-socials a{
+      font-size: 0.4rem;
+    }
+  }
+
+  .navbar{
+    padding: 2rem 1rem;
+  }
+
+  .portfolio{
+    padding: 1rem;
+  }
+}
