--- a/styles.css
+++ b/styles.css
@@ -502,7 +502,7 @@ body {
 }
 
 .expertise-item {
-  max-width: 800px;
+  max-width: 50%;
   margin: 3rem 0;
 }
 
@@ -1316,6 +1316,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(5px);
+  overflow-y: auto; 
 }
 
 .modal-content {
@@ -1329,6 +1330,8 @@ body {
   animation: modalSlideIn 0.3s ease;
   display: flex;
   flex-direction: column;
+  max-height: 90vh; 
+  overflow-y: auto; 
 }
 
 .close {
@@ -1421,6 +1424,13 @@ body {
   padding: 0.5rem 1rem;
   border-radius: 10px;
   font-size: 1rem;
+}
+
+.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes shine {
@@ -1516,14 +1526,6 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .content {
-    
-  }
-
-  .viewport-container {
-    
-  }
-
   .navbar {
     display: flex;
     align-items: center;
@@ -1730,6 +1732,18 @@ body {
   .copyright {
     padding: 0 5rem;
   }
+
+  .modal{
+    width: 100%;
+    overflow-y: auto; 
+  }
+
+  .modal-content {
+    width: 80%;
+    max-width: 80%; 
+    max-height: 85vh; 
+    padding: 1.5rem; 
+  }
 }
 
 @media screen and (max-width: 575px) {
@@ -1877,6 +1891,14 @@ body {
   .copyright {
     padding: 0 3rem;
   }
+
+  .modal-content {
+    width: 80%; 
+    max-width: 80%;
+    max-height: 80vh;
+    padding: 1rem;
+  }
+
 }
 
 @media screen and (max-width: 480px) {
